--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="str2 str3">
         <a href="https://nicolayy.itch.io/spaceprogram" data-tooltip="Разверните приложение на полный экран. <br/> При движении бегунка времени  вверх будут добавляться <br/> космические объекты. Для детального просмотра вращайте фигуры <br/>правой кнопкой мыши. По щелчку мыши на объекте <br/>появляется информация об объкте" target="_blank">Виртуальное путешествие в историю освоения космоса</a>
       
-        <a href="book/Release.apk" data-tooltip="Установите скачанное приложение на мобильное устройство <br> Скачайте приложение по QR-коду">Приятного путешествия</a>
+        <a href="book/Release.apk" data-tooltip="Установите скачанное приложение на мобильное устройство <br> Скачайте приложение по QR-коду" target="_blank">Приятного путешествия</a>
         <a href="book/astronomia.pdf" data-tooltip="Наведите приложение на изображение. <br/> Для детального рассмотрения вращайте фигуры руками.<br/> При нажатии на букву I появится дополнительная информация" target="_blank">Виртуальное путешествие по Солнечной системе</a>
        </div>
     
