--- a/f2012.html
+++ b/f2012.html
@@ -86,6 +86,6 @@
     
    
   <script src="js/script.js"></script>
-    
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </body>
 </html>
