--- a/victorina.html
+++ b/victorina.html
@@ -31,7 +31,7 @@
     <button type="button" id="testRez">Следующий вопрос </button>
 </div>
 </div>
-<div>
+<div id="spio">
     <a href="index.html" class=" ship"><img class="changable-image" src="img/auto/Без имени-1.png" alt=""></a>
 </div>
 </div>
