--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src="image/sputn4442.gif" class="hero">
                
                 <img src="image/sputn3.gif"    class="hero">
-                <a href="https://www.dropbox.com/s/3sr0su10oue82ya/Release%20%281%29.apk?dl=1" ></a>
+                <a href="https://www.dropbox.com/s/3sr0su10oue82ya/Release%20%281%29.apk?dl=1" data-tooltip="Установите скачанное приложение на мобильное устройство" class="obchod"><img src="book/qrcode.png" ></a>
             </div>
     </div>
     
