--- a/Belka.html
+++ b/Belka.html
@@ -20,7 +20,8 @@
 </div>
 <div class="collumnsN">
   
-  <p id=text14 class=" strText">  <span class="s1">🛰️</span>Беларуси открылись
+  <p id=text14 class=" strText">  <span class="s1"><a href="https://nicolayy.itch.io/spaceprogram" target="_blank" rel="noopener noreferrer" 
+    data-tooltip="Приятного путешествия"> 🛰️</a></span>Беларуси открылись
      дороги в космический клуб<span class="s2" data-tooltip="Карта сайта">🚀</span></p>
 
 </div>
