--- a/Kosmonavt.html
+++ b/Kosmonavt.html
@@ -16,7 +16,8 @@
     <div id="container1">
       
         <div class="col0"> 
-            <h1 class="strText"><span class="s1">🛰️</span>Пройдите первое испытание. Найдите космонавтов по фотографии<span class="s2" data-tooltip="Карта сайта">🚀</span></h1></div>
+            <h1 class="strText"><span class="s1"><a href="https://nicolayy.itch.io/spaceprogram" target="_blank" rel="noopener noreferrer" 
+                data-tooltip="Приятного путешествия"> 🛰️</a></span>Пройдите первое испытание. Найдите космонавтов по фотографии<span class="s2" data-tooltip="Карта сайта">🚀</span></h1></div>
         <div class="col0 col1"><img src="img/gagarin.png"  draggable="true" id="id1" ></div>
         <div class="col0 col1"><img src="img/klimchuk.png"  draggable="true" id="id4" ></div>
         <div class="col0 col1"><img src="img/kovalenok.png"   draggable="true" id="id6" ></div>
