--- a/Pomnit.html
+++ b/Pomnit.html
@@ -14,7 +14,8 @@
     <div class="wrapper">
        
           <div class="caption-border">
-            <p class="strText textAl"><span class="s1">🛰️</span>БЕЛАРУСЬ ПОМНИТ НАСЛЕДНИЕ СОВЕТСКОГО СОЮЗА<span class="s2" data-tooltip="Карта сайта">🚀</span></p>
+            <p class="strText textAl"><span class="s1"><a href="https://nicolayy.itch.io/spaceprogram" target="_blank" rel="noopener noreferrer" 
+                data-tooltip="Приятного путешествия"> 🛰️</a></span>БЕЛАРУСЬ ПОМНИТ НАСЛЕДНИЕ СОВЕТСКОГО СОЮЗА<span class="s2" data-tooltip="Карта сайта">🚀</span></p>
         </div> 
         <div class="caption-border">
           
