--- a/f2012.html
+++ b/f2012.html
@@ -14,7 +14,8 @@
             <div>
                 <div class="box2">
                    
-                    <p class="kor strText"><span class="s1">🛰️</span>2012 год <span class="s2">🚀</span></p>
+                    <p class="kor strText"><span class="s1"><a href="https://nicolayy.itch.io/spaceprogram" target="_blank" rel="noopener noreferrer" 
+                        data-tooltip="Приятного путешествия"> 🛰️</a></span>2012 год <span class="s2">🚀</span></p>
                </div>
             <div class="text1">
                
