--- a/korolev.html
+++ b/korolev.html
@@ -18,7 +18,8 @@
        </div>
     </div>
     <div class="collumnsN">
-        <p id=text0 class="strText"> <span class="s1">🛰️</span>Впервые в мире спутник попал на орбиту планеты Земля<span class="s2" data-tooltip="Карта сайта">🚀</span></p>
+        <p id=text0 class="strText"> <span class="s1"> <a href="https://nicolayy.itch.io/spaceprogram" target="_blank" rel="noopener noreferrer" 
+            data-tooltip="Приятного путешествия"> 🛰️</a></span>Впервые в мире спутник попал на орбиту планеты Земля<span class="s2" data-tooltip="Карта сайта">🚀</span></p>
     </div>
     <div class="collumnsN">
         <p class="strText">Выберите фотографию первого СОВЕТСКОГО спутника</p>
