--- a/puzzle.html
+++ b/puzzle.html
@@ -11,7 +11,8 @@
 <body>
     <p id="stars">
     <h1 class="strText textAl">
-        <span class="s1">🛰️</span> игра-пазл "Собери картинку первого спутника Республики Беларусь"
+        <span class="s1"><a href="https://nicolayy.itch.io/spaceprogram" target="_blank" rel="noopener noreferrer" 
+            data-tooltip="Приятного путешествия"> 🛰️</a></span> игра-пазл "Собери картинку первого спутника Республики Беларусь"
         <span class="s2" data-tooltip="Карта сайта">🚀</span></h1>
 <div id="zone1">
 
