--- a/sobaki.html
+++ b/sobaki.html
@@ -20,7 +20,8 @@
   </div>
   <div class="collumnsN">
     
-          <p id=text10 class="strText"><span class="s1">🛰️</span>виртуальное путешествие<span class="s2" data-tooltip="Карта сайта">🚀</span></p>
+          <p id=text10 class="strText"><span class="s1"><a href="https://nicolayy.itch.io/spaceprogram" target="_blank" rel="noopener noreferrer" 
+            data-tooltip="Приятного путешествия"> 🛰️</a></span>виртуальное путешествие<span class="s2" data-tooltip="Карта сайта">🚀</span></p>
       
   </div>
   <div class="collumnsN">
