--- a/S1991.html
+++ b/S1991.html
@@ -14,7 +14,8 @@
     <div>
     <div class="box2">
        
-        <p class="kor strText"><span class="s1">🛰️</span>1991 год <span class="s2" data-tooltip="Карта сайта">🚀</span></p>
+        <p class="kor strText"><span class="s1"><a href="https://nicolayy.itch.io/spaceprogram" target="_blank" rel="noopener noreferrer" 
+            data-tooltip="Приятного путешествия"> 🛰️</a></span>1991 год <span class="s2" data-tooltip="Карта сайта">🚀</span></p>
    </div>
 <div class="text1">
    <p>В 1991 году Республика Беларусь стала независимым государством.</p>
