--- a/dostig.html
+++ b/dostig.html
@@ -14,7 +14,8 @@
     <div class="wrapper wr">
        
           <div class="caption-border">
-            <p class="strText textAl"><span class="s1">🛰️</span>Для чего используются спутники?<span class="s2" data-tooltip="Карта сайта">🚀</span></p>
+            <p class="strText textAl"><span class="s1"><a href="https://nicolayy.itch.io/spaceprogram" target="_blank" rel="noopener noreferrer" 
+                data-tooltip="Приятного путешествия"> 🛰️</a></span>Для чего используются спутники?<span class="s2" data-tooltip="Карта сайта">🚀</span></p>
        <p class="strText textAl">Главная задача спутника – делать фотоснимки территории земного шара с высоты 510 км. </p>
        <!-- <p class="strText textAl"> Главные заказчики снимков: МЧС,  Белгидромет, Минобороны, Белгослес, Минсельхозпрод и другие структуры. Есть и зарубежные заказчики, которые просят заснять территорию интересующего их государства. </p> -->
        <!-- <p class="strText textAl">С помощью космического зонда специалисты обнаруживают тепловые аномалии, делают прогноз погоды и урожайности зерновых культур, отслеживают техногенные и природные чрезвычайные ситуации (пожары, паводки, наводнения), создают и обновляют топографические и навигационные карты, выявляют перспективные площадки для разработки полезных ископаемых</p> -->
