--- a/dostig2.html
+++ b/dostig2.html
@@ -14,7 +14,8 @@
     <div class="wrapper wr wr1">
        
           <div class="caption-border">
-            <p class="strText textAl"><span class="s1">🛰️</span>С запуском БКА Беларусь получила возможность реально участвовать в международных структурах и проектах.<span class="s2">🚀</span></p>
+            <p class="strText textAl"><span class="s1"><a href="https://nicolayy.itch.io/spaceprogram" target="_blank" rel="noopener noreferrer" 
+                data-tooltip="Приятного путешествия"> 🛰️</a></span>С запуском БКА Беларусь получила возможность реально участвовать в международных структурах и проектах.<span class="s2">🚀</span></p>
        <!-- <p class="strText textAl">  </p> -->
        <!-- <p class="strText textAl"> Снимки со спутников используются для картографии, земельного кадастра, в лесном хозяйстве и при чрезвычайных ситуациях. </p> -->
        <!-- <p class="strText textAl">С помощью космического зонда специалисты обнаруживают тепловые аномалии, делают прогноз погоды и урожайности зерновых культур, отслеживают техногенные и природные чрезвычайные ситуации (пожары, паводки, наводнения), создают и обновляют топографические и навигационные карты, выявляют перспективные площадки для разработки полезных ископаемых</p> -->
