--- a/gagarin.html
+++ b/gagarin.html
@@ -19,7 +19,8 @@
     </div>
     <div class="collumnsN">
       
-        <p id=text13 class="strText  "><span class="s1">🛰️</span>Впервые в мире человек вышел на орбиту планеты Земля<span class="s2" data-tooltip="Карта сайта">🚀</span></p>
+        <p id=text13 class="strText  "><span class="s1"><a href="https://nicolayy.itch.io/spaceprogram" target="_blank" rel="noopener noreferrer" 
+            data-tooltip="Приятного путешествия"> 🛰️</a></span>Впервые в мире человек вышел на орбиту планеты Земля<span class="s2" data-tooltip="Карта сайта">🚀</span></p>
         
     </div>
     <div class="collumnsN">
